hphp/hack/test/typecheck/expression_trees/nested_splicing2.php.exp
File "nested_splicing2.php", line 6, characters 14-17:
Splice syntax `${...}` cannot be nested. (Parsing[1002])
File "nested_splicing2.php", line 6, characters 14-17:
Typing error (Typing[4110])
  File "nested_splicing2.php", line 6, characters 14-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "nested_splicing2.php", line 6, characters 16-16:
  But got `int`
